changed text box-text__span

--- a/shop-coffins.html
+++ b/shop-coffins.html
@@ -146,171 +146,23 @@
                 <div class="attention">
                     <div class="attention__text">Уважаемые клиенты и посетители нашего сайта, обращаем Ваше внимание, что цены на продукцию, могут быть не корректными, так как нет возможности синхронизировать и единомоментно внести изменения на весь ассортимент сразу. Будьте любезны, перед тем как буквально «ехать» в магазин, уточните пожалуйста цену на заинтересовавший Вас товар, у нашего сотрудника по телефонам, указанным на сайте. С уважением, администрация сайта.</div>
                 </div>
-                <!-- блок с товарами -->
-                <div class="shop-block">
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб лакированный гл 200</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/1-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/1-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/1.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/1.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">550 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
-                        </div>
+
+                <div class="button-sort">
+                    <div class="button-sort__box">
+                        <div class="button-sort__cheap">дешевле</div>
+                        <div class="button-sort__lot  _sort-color">дороже</div>
                     </div>
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб "лакированный скрипка гл-скрипка"</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/2-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/2-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/2.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/2.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">560 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб комбинированный красный гк-1к/б</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/4-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/4-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/4.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/4.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">380 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб комбинированный красный гк-2к/ч</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/5-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/5-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/5.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/5.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">380 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб комбинированный синий гк-4</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/6-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/6-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/6.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/6.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">380 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб социальный стандарт синий гс-2</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/7-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/7-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/7.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/7.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">230 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб социальный стандарт синий гс-1</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/8-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/8-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/8.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/8.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">230 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб социальный стандарт коричневый гс-3</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/9-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/9-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/9.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/9.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">230 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="shop-block__item flex_coffins">
-                        <!-- карточка товара -->
-                        <div class="card">
-                            <div class="card__body">
-                                <div class="card__title">Гроб социальный стандарт синий гс-1</div>
-                                <div class="card__img card__img_height">
-                                    <picture>
-                                        <source srcset="img/__shop-coffins/8-350.webp" type="image/webp" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/8-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                                        <source srcset="img/__shop-coffins/8.webp" type="image/webp">
-                                        <img src="img/__shop-coffins/8.jpg" alt="гроб">
-                                    </picture>
-                                </div>
-                                <div class="card__prais">230 BYN</div>
-                                <a class="card__button" href="contacts.html">купить</a>
-                            </div>
+                    <div class="button-sort__praice">
+                        <div class="button-sort__title">Сортировка цены:</div>
+                        <div class="button-sort__praice-box">
+                            <input class="button-sort__input _border-right" name="from" type="number" maxlength="5" placeholder="от" autocomplete="off">
+                            <input class="button-sort__input" name="before" type="number" placeholder="до" autocomplete="off">
                         </div>
                     </div>
                 </div>
+
+                <!-- блок с товарами -->
+                <div class="shop-block" data-json="ajax/coffins.json"></div>
             </div>
             <!-- текст: -->
             <div class="text-page container">
@@ -352,7 +204,7 @@
         </footer>
         <!-- end wrapper -->
     </div>
-
+<script src="js/coffins.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
