--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <!-- соболезнуем-1 -->
             <div class="box-text box_margin">
-                <span class="box-text__span span_margin">Искренне соболезнуем вам, если вас коснулось горе. Предлагаем и оказываем Все виды ритуальных услуг на протяжении более, чем 17 лет.</span>
+                <span class="box-text__span span_margin">Искренне соболезнуем вам, если вас коснулось горе. Оказываем Все виды ритуальных услуг на протяжении 18 лет.</span>
             </div>
             <!-- три колонки -->
             <div class="multi">
@@ -153,8 +153,8 @@
                             </picture>
                         </div>
                         <div class="cart__line"></div>
-                        <div class="cart__title">ЧТО ДЕЛАТЬ КОГДА УМЕР БЛИЗКИЙ ?</div>
-                        <div class="cart__sub-title">Когда кто-то умирает, есть ряд вещей которые нужно сделать в первую очередь.</div>
+                        <div class="cart__title">ЧТО ДЕЛАТЬ КОГДА УМЕР ЧЕЛОВЕК ?</div>
+                        <!-- <div class="cart__sub-title">Когда кто-то умирает, есть ряд вещей которые нужно сделать в первую очередь.</div> -->
                         <a class="cart__botton" href="if-died.html">подробнее</a>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                         </div>
                         <div class="cart__line"></div>
                         <div class="cart__title">МАГАЗИН</div>
-                        <div class="cart__sub-title">Каталог всего необходимого для погребения и кремации.</div>
+                        <!-- <div class="cart__sub-title">Каталог всего необходимого для погребения и кремации.</div> -->
                         <a class="cart__botton" href="shop-coffins.html">подробнее</a>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                         </div>
                         <div class="cart__line"></div>
                         <div class="cart__title">КОНТАКТЫ РИТУАЛЬНЫХ АГЕНТОВ</div>
-                        <div class="cart__sub-title">Телефонные номера и иные способы связи, для получения незамедлительной помощи в тяжёлый момент.</div>
+                        <!-- <div class="cart__sub-title">Телефонные номера и иные способы связи, для получения незамедлительной помощи в тяжёлый момент.</div> -->
                         <a class="cart__botton" href="contacts.html">подробнее</a>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
 
                 <div class="age-17__item-3">
                     <div class="age-17__title-3">Кратко о Нас</div>
-                    <div class="age-17__sub-title-3">МЫ ПРЕДОСТАВЛЯЕМ УСЛУГИ ПО ПОХОРОНАМ И КРЕМАЦИИ С 2005 ГОДА.</div>
+                    <div class="age-17__sub-title-3">МЫ ОКАЗЫВАЕМ ВСЕ ВИДЫ РИТУАЛЬНЫХ УСЛУГ С 2005 ГОДА.</div>
                     <div class="age-17__line"></div>
                     <div class="age-17__text-3">Вы не остаетесь с горем один на один, мы многие годы помогаем людям в трудные минуты их жизни, круглосуточная помошь и консультация по вопросам кремации и захоронения.</div>
                     
