--- a/calc.html
+++ b/calc.html
@@ -168,7 +168,7 @@
                         </div>
                         <div class="coffin__item">
                             <img class="coffin__img" src="/img/__calc/coffin/3.jpg" alt="#">
-                            <div class="coffin__label" data-cash="230">Гроб соцыальный</div>
+                            <div class="coffin__label" data-cash="230">Гроб социальный</div>
                         </div>
                     </div>
 
