--- a/__index.html
+++ b/__index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="➤ Весь спектр похоронных услуг: захоронение, кремация, оформление места захоронения, копка могилы, услуги санитара-патологоанатома, подготовка тела к погребению.">
     <meta name="theme-color" content="#ba9f5a">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Ритуальные услуги в Минске - бюро похоронных услуг</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
