--- a/burial.html
+++ b/burial.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Окажем помощь в организации всего процесса захоронения. Доступные цены на ритуальные услуги в Минске и Минской области.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Услуги захоронения в Минске</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
