--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Здесь мы собрали контактные данные нашей компании, по которым вы можете связаться с нами. ☎ Звоните за консультацией!">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Контакты</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
