--- a/loaders.html
+++ b/loaders.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Услуги ритуальных грузчиков в Минске и Минской области. ✅ Ответственные носильщики гроба по доступной цене.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Носильщики гроба в Минске и Минской области - ритуальные грузчики</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
