--- a/shop-baskets.html
+++ b/shop-baskets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Корзины ритуальные</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
@@ -151,14 +151,14 @@
                 <div class="shop-block__item flex-baskets">
                     <div class="card">
                         <div class="card__body">
-                            <div class="card__title">Корзина к 7/к</div>
+                            <div class="card__title">Корзина к-7/к</div>
                             <div class="card__img  card__img_height-baskets">
                                 <picture>
                                     <source srcset="img/__shop-baskets/1.webp" type="image/webp">
                                     <img src="img/__shop-baskets/1.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">65 BYN</div>
+                            <div class="card__prais">94 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -167,14 +167,14 @@
                 <div class="shop-block__item flex-baskets">
                     <div class="card">
                         <div class="card__body">
-                            <div class="card__title">Корзина к 7/ф</div>
+                            <div class="card__title">Корзина к-7/ф</div>
                             <div class="card__img  card__img_height-baskets">
                                 <picture>
                                     <source srcset="img/__shop-baskets/2.webp" type="image/webp">
                                     <img src="img/__shop-baskets/2.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">65 BYN</div>
+                            <div class="card__prais">94 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                                     <img src="img/__shop-baskets/3.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">40 BYN</div>
+                            <div class="card__prais">50 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                                     <img src="img/__shop-baskets/4.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">40 BYN</div>
+                            <div class="card__prais">50 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                                     <img src="img/__shop-baskets/5.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">40 BYN</div>
+                            <div class="card__prais">65 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                                     <img src="img/__shop-baskets/6.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">40 BYN</div>
+                            <div class="card__prais">65 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
                                     <img src="img/__shop-baskets/7.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">35 BYN</div>
+                            <div class="card__prais">50 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -270,7 +270,7 @@
                                     <img src="img/__shop-baskets/8.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">35 BYN</div>
+                            <div class="card__prais">50 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -286,7 +286,7 @@
                                     <img src="img/__shop-baskets/9.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">35 BYN</div>
+                            <div class="card__prais">50 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -302,7 +302,7 @@
                                     <img src="img/__shop-baskets/10.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">31 BYN</div>
+                            <div class="card__prais">47 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -318,7 +318,7 @@
                                     <img src="img/__shop-baskets/11.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">31 BYN</div>
+                            <div class="card__prais">47 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -334,7 +334,7 @@
                                     <img src="img/__shop-baskets/12.jpg" alt="гроб">
                                 </picture>
                             </div>
-                            <div class="card__prais">31 BYN</div>
+                            <div class="card__prais">47 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
