--- a/shop-clothes.html
+++ b/shop-clothes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Недорогую обувь и одежду для похорон можно купить в нашем магазине. Цена на погребальные наряды доступна каждому. Доставка по Минску!">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Погребальная одежда, обувь для женщин и мужчин купить в Минске</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
@@ -153,7 +153,7 @@
                                     <img src="img/__shop-clothes/1.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">55 BYN</div>
+                            <div class="card__prais">68 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                                     <img src="img/__shop-clothes/2.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">55 BYN</div>
+                            <div class="card__prais">68 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                                     <img src="img/__shop-clothes/3.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">53 BYN</div>
+                            <div class="card__prais">68 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                                     <img src="img/__shop-clothes/4.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">23 BYN</div>
+                            <div class="card__prais">35 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                                     <img src="img/__shop-clothes/5.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">5 BYN</div>
+                            <div class="card__prais">6 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
                                     <img src="img/__shop-clothes/7.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">22 BYN</div>
+                            <div class="card__prais">35 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                                     <img src="img/__shop-clothes/8.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">19 BYN</div>
+                            <div class="card__prais">30 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
                                     <img src="img/__shop-clothes/10.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">37 BYN</div>
+                            <div class="card__prais">49 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -313,7 +313,7 @@
                                     <img src="img/__shop-clothes/11.jpg" alt="одежда для погребения">
                                 </picture>
                             </div>
-                            <div class="card__prais">37 BYN</div>
+                            <div class="card__prais">50 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
