--- a/shop-coffins.html
+++ b/shop-coffins.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Гроб у нас можно купить обитый тканью, полированный, разных размеров и формы. Цена на всю продукцию невысокая. 🚚 Доставка по Минску.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Гроб купить в Минске - где купить по недорогой цене гроб для похорон</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
