--- a/shop-crosses.html
+++ b/shop-crosses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Оформление заказа креста ☦ осуществляется круглосуточно. Сделать это можно по ☎ телефону или оставив заявку на сайте.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Крест для похорон купить в Минске: цена католического православного</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
@@ -153,7 +153,7 @@
                                     <img src="img/__shop-crosses/1.jpg" alt="крест ритуальный">
                                 </picture>
                             </div>
-                            <div class="card__prais">37 BYN</div>
+                            <div class="card__prais">68 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                                     <img src="img/__shop-crosses/2.jpg" alt="крест ритуальный">
                                 </picture>
                             </div>
-                            <div class="card__prais">37 BYN</div>
+                            <div class="card__prais">68 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                                     <img src="img/__shop-crosses/3.jpg" alt="крест ритуальный">
                                 </picture>
                             </div>
-                            <div class="card__prais">35 BYN</div>
+                            <div class="card__prais">62 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                                     <img src="img/__shop-crosses/4.jpg" alt="крест ритуальный">
                                 </picture>
                             </div>
-                            <div class="card__prais">35 BYN</div>
+                            <div class="card__prais">86 BYN</div>
                             <a class="card__button" href="contacts.html">купить</a>
                         </div>
                     </div>
