--- a/shop-payment.html
+++ b/shop-payment.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="🚚 Оказываем доставку товаров с нашего магазина c 08:00 до 20:00 без выходных. Доставка по Минску 7 р. При заказе более 150 р. – доставка бесплатно.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Доставка и оплата</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
