--- a/burial-allowance.html
+++ b/burial-allowance.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Какой актуальный размер пособия на погребение в Беларуси, как получить пособие для захоронения и какие документы для этого необходимы.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Пособие на погребение - размер пособия, документы для получения</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
