--- a/cemetery-minsk.html
+++ b/cemetery-minsk.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="На территории Минска и Минской области находится около 20 кладбищ. Какие у них адреса и особенности на нашем сайте.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Кладбища Минска - действующие места захоронения</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
