--- a/copter-graves.html
+++ b/copter-graves.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="☑️ Оказываем услуги по копке могилы. Копка могилы на кладбище может осуществляться как вручную, так и с использованием специальной техники.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Копка могилы в Минске и Минской области - услуга выкопать могилу</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
