--- a/if-died.html
+++ b/if-died.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Смерть близкого человека – это всегда потрясение и эмоциональный шок, поэтому главное взять себя в руки и не совершать ошибок!">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Что делать, если умер близкий человек советы рекомендации</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
