--- a/information.html
+++ b/information.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Здесь мы собрали всю самую важную и необходимую информацию, которая поможет все сделать правильно при захоронении своего близкого человека.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Важная и полезная информация, рекомендации при смерти человека</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
