--- a/reviews.html
+++ b/reviews.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Здесь мы собрали отзывы наших благодарных клиентов, к которым мы пришли на помощь в сложное для них время.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Отзывы компании похороны в Минске ИП Шусталик С.А.</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
