--- a/ritual-agent.html
+++ b/ritual-agent.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="➤ Наш ритуальный агент оперативно проконсультирует и поможет в организации полного процесса похорон вашего близкого человека на должном уровне.">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
     <title>Ритуальный агент в Минске - цена услуг похоронного агента</title>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
